--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,15 @@ flutter:
   assets:
   - images/yaya.jpeg
 
+  fonts:
+    - family: Pacifico
+      fonts:
+        - asset: fonts/Pacifico-Regular.ttf
+
+    - family: SourceSans3
+      fonts:
+        - asset: fonts/SourceSans3-Regular.ttf
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
